--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Diabetes Detection System</title>
+  <title>AI Disease Detection System</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -14,7 +14,7 @@
 
       <div class="landing-text">
         <img src="iiit-una-logo.jpeg" class="logo" alt="IIIT Una Logo">
-        <h1>AI Diabetes Detection System</h1>
+        <h1>AI Disease Detection System</h1>
         <p class="motive">
           A healthcare-focused AI system designed to assist in early disease
           detection and promote preventive medical care.
