--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
 
     <div class="dashboard">
 
-      <h2 class="dashboard-title">Patient Health Parameters</h2>
+      <h2 style="color: black;" class="dashboard-title">Patient Health Parameters</h2>
 
       <form id="healthForm" class="dashboard-form">
 
